css/style.css
@import url("https://fonts.googleapis.com/css?family=Lato|Open+Sans");
@font-face {
  font-family: "din-regular";
  src: url("../type/DINPro-Regular.otf") format("opentype");
}
@font-face {
  font-family: "din-bold";
  src: url("../type/DINPro-Bold.otf") format("opentype");
}

/* GENERAL STYLES */
html,
body {
  font-family: "Open Sans", sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
h1,
h2 {
  font-family: "din-bold", sans-serif;
}
h1 {
  font-size: 40px;
  margin: 40px;
}

/* NAVIGATION BAR */
#navigation-bar {
  background-color: #f1c40f;
  display: block;
  padding: 12px 0;
  overflow: hidden;
  position: fixed;
  width: 100%;
  top: 0;
  text-align: right;
  font-weight: bold;
}
#name {
  float: left;
  padding-left: 20px;
  text-decoration: none;
  color: black;
}
.navigation-item {
  padding: 0 20px 0 10px;
  text-decoration: none;
  color: black;
}
.navigation-item:hover {
  text-decoration: underline;
}
.navigation-item:focus {
  background-color: white;
}
#name:hover {
  text-decoration: underline;
}
#name:focus {
  background-color: white;
}

/* INTRODUCTION SECTION */
.intro-content {
  max-width: 80vw;
  height: 100vh;
  text-align: center;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
}
.intro-image {
  margin-top: 100px;
  width: 200px;
}
.intro-text {
  width: 80%;
  padding: 20px;
  font-size: 40px;
  font-family: din-regular;
  text-align: left;
}

/* PROJECTS SECTION */
#projects-section {
  background-color: #ecf0f1;
}
.projects-content {
  max-width: 80vw;
  height: 100vh;
  margin: 0 auto;
}
#projects-grid-container {
  height: inherit;
  border: 1px solid red;
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(3, minmax(150px, auto));
}
.project img {
  object-fit: cover;
  width: 100%;
}

/* CONTACT SECTION */
.contact-container {
  display: flex;
  width: 100vw;
  height: 100vh;
  align-items: center;
  align-content: center;
  justify-content: center;
}

/* LINKS */
#icon-container {
  display: grid;
  grid-template-columns: auto auto auto;
  padding: 0 250px;
  margin-top: 50px;
}
.icon-item {
  width: 50px;
  align-self: center;
  justify-self: center;
}
.icon-item:hover {
  -webkit-transform: scale(1.5); /* Safari and Chrome */
  -moz-transform: scale(1.5); /* Firefox */
  -ms-transform: scale(1.5); /* IE 9 */
  -o-transform: scale(1.5); /* Opera */
  transform: scale(1.5);
}

/* FOOTER SECTION */
.site-footer {
  padding: 40px 0;
  font-size: 16px;
  margin: 0;
}

/* MEDIA QUERIES */
@media only screen and (max-width: 900px) {
  /* PROJECTS SECTION */
  .projects-content {
    max-width: 90%;
  }
  #projects-grid-container {
    grid-template-columns: repeat(2, minmax(150px, auto));
  }
  .project img {
    width: 90%;
  }
  h2 {
    font-size: 20px;
  }
}

@media only screen and (max-width: 600px) {
  /* PROJECTS SECTION */
  .projects-content {
    max-width: 80%;
  }
  #projects-grid-container {
    grid-template-columns: repeat(1, 1fr);
  }
  .project img {
    width: 100%;
  }
}

